# brainfeed

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp
include/: string_util.hpp  tape_machine.hpp
src/: tape_machine.cpp
